<resources>
    <string name="app_name">Toolbar</string>
    <string name="Login">Login</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="frgpwd">Forget Password?</string>
    <string name="sign">Don\'t Have an Account? Sign Up</string>
    <string name="or">or</string>
    <string name="fbLogin">Login with Facebook</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="Email">Email</string>
    <string name="Signup">Sign Up</string>
    <string name="already_acc">Already Have an Account? Login</string>
    <string name="search">Search Retailer</string>
    <string name="error">error</string>
    <string name="gift">Add Gift Card</string>
</resources>
