<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/tbTool"
        android:background="@android:color/holo_blue_bright"
        android:layout_height="?attr/actionBarSize">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/etTextSize"
            android:text="@string/Signup"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            />
    </android.support.v7.widget.Toolbar>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etFname"
        android:layout_below="@+id/tbTool"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:hint="@string/fname"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etFname"
        android:hint="@string/lname"
        android:id="@+id/etLname"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etLname"
        android:hint="@string/Email"
        android:id="@+id/etEmail"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:hint="@string/pass"
        android:id="@+id/etSignPass"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:id="@+id/btLogin"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_below="@id/etSignPass"
        android:text="@string/Signup"
        android:textColor="#ffff"
        android:background="@drawable/shape"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_acc"
        android:layout_below="@id/btLogin"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_blue_light"
        android:onClick="Click"
        android:id="@+id/tvSignin"
        />
</RelativeLayout>