<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.cbluser35.toolbar.activity.SignInActivity">
<android.support.v7.widget.Toolbar
    android:layout_width="match_parent"
    android:id="@+id/tbTool"
    android:background="@android:color/holo_blue_bright"
    android:layout_height="?attr/actionBarSize">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/etTextSize"
        android:text="@string/Login"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:textAlignment="center"
         />
</android.support.v7.widget.Toolbar>

    <EditText
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:id="@+id/etUserLogin"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbTool"
        android:hint="@string/user"
        android:inputType="textEmailAddress"/>

    <EditText
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUserLogin"
        android:id="@+id/etPassLogin"
        android:hint="@string/pass"
        android:inputType="textPassword"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassLogin"
        android:text="@string/frgpwd"
        android:textColor="@android:color/holo_blue_light"
        android:layout_alignEnd="@id/etPassLogin"
        android:layout_alignRight="@id/etPassLogin"
        android:id="@+id/tvFrgpwd"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/buttonPadd"
        android:paddingLeft="@dimen/buttonPadd"
        android:id="@+id/btLogin"
        android:layout_marginTop="@dimen/buttonPadd"
        android:layout_below="@id/tvFrgpwd"
        android:text="@string/Login"
        android:textColor="#ffff"
        android:textAllCaps="false"
        android:background="@drawable/shape"
        android:layout_centerHorizontal="true"
        android:onClick="login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_light"
        android:text="@string/sign"
        android:id="@+id/tvSignUp"
        android:layout_below="@id/btLogin"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:onClick="click"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="@dimen/twentyfive"
        android:layout_below="@id/tvSignUp"
        android:layout_centerHorizontal="true"
        android:id="@+id/tvOr"
        android:layout_margin="@dimen/activity_horizontal_margin"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvOr"
        android:text="@string/fbLogin"
        android:textColor="@android:color/white"
        android:background="@drawable/shape2"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:drawableLeft="@drawable/ic_facebook"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textAllCaps="false"
        android:id="@+id/btFb"
        />


</RelativeLayout>
